# sqlight

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  LICENCE.txt  README.md  skills-lock.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: chinook.db
scripts/: build-apt-repo.sh  build-release-artifacts.sh
src/: app.rs  app_dirs.rs  config.rs  db.rs  event.rs  input.rs  layout.rs  main.rs  state.rs  theme.rs  ui.rs
src/db/: mod.rs  query.rs  schema.rs  types.rs  write.rs
src/export/: mod.rs
src/filter/: mod.rs  predicate.rs  rule.rs
src/grid/: alphabet_rail.rs  layout.rs  mod.rs  virtual_scroll.rs
src/ui/: mod.rs  sidebar.rs  statusbar.rs  tabbar.rs  toast.rs
src/ui/popup/: command_palette.rs  date_picker.rs  datetime_picker.rs  filter.rs  find.rs  fk_picker.rs  help.rs  insert_row.rs  mod.rs  search_result_format.rs  search_results_table.rs  text_editor.rs  value_picker.rs
