[package]
name = "sqv"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sqv"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono", "blob", "functions"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "signal"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
clap = { version = "4", features = ["derive"] }
unicode-width = "0.2"
unicode-segmentation = "1"
fuzzy-matcher = "0.3"
regex = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
lru = "0.12"
csv = "1.3"
